Modify CSS to prevent stretching carousel images

--- a/content/homepage.css
+++ b/content/homepage.css
@@ -13,6 +13,9 @@ body {
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -22,14 +25,14 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+  height: 380px;
 }
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 32rem;
+  max-height: 380px;
 }
 
 /* MARKETING CONTENT
